--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 							<li><a href="https://www.facebook.com/govindram001" class="button also">Facebook</a></li>
 							<li><a href="https://bit.ly/GRGCP" class="button also">Google Certified</a></li>
 							<li><a href="https://www.crunchbase.com/person/govind-r" class="button also">Crunchbase</a></li>
+							<li><a href="https://www.youracclaim.com/users/govindram001" class="button also">Acclaim Profile</a></li>
 
 						</ul>
 					</nav>
