--- a/expertise.html
+++ b/expertise.html
@@ -22,6 +22,7 @@
 		<li><a href="https://bit.ly/GRGCP" class="button also">Google Certified</a></li>
 		<li><a href="images/Govind.pdf" class="button special">Resume</a></li>
 		<li><a href="https://www.crunchbase.com/person/govind-r" class="button also">Crunchbase</a></li>
+		<li><a href="https://www.youracclaim.com/users/govindram001" class="button also">Acclaim Profile</a></li>
 		</ul>
 		</nav>
 		</header>
