--- a/expertise.html
+++ b/expertise.html
@@ -37,14 +37,14 @@
 	<p>I'm an IT Infrastrcutre Support Specialist with Expectional knoweldge in NOC/Remote Support services. </p>
 	<p>In the young age itself I was fond of Technology, Robotics, Computers and Martial Arts. I started learning Kalari from the age of 12, when i was in my 7th Standard and now nearly having knowledge and experience of 13 years. At the age of 17, I started learning Karate also along with Kalaripayattu. During my life journey I understand that the most powerful tool in this world is<span style="color:red;"><b> Technology</b></span>, I hope to use the same to enhance future. </h3>
 	<p>From the childhood days itself I was an overweighted person, My </p>
-										<ul> MyTechnology Expertise
+										<ul><center>MyTechnology Expertise</center>
 											<li>MCP/MCSA/MCSE Certified</li>
 											<li>ITIL® Certified </li>
 											<li>Technical Support</li>
 											<li>Infrastructure Management Support Specialist</li>
 										</ul>
 
-										<ul> My Personal Interests
+										<ul><center>My Personal Interests</center>
 											<li>Martial Arts (Kalari & Karate)</li>
 											<li>Meditation</li>
 											<li>Influencer and Social Media Promoter</li>
