--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
 	<ul class="copyright">
 	<li>@Govind All rights reserved.</li>
 	</ul>
+	
+<script data-ad-client="ca-pub-6927067584755700" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 		</footer>
 
 		</div>
