--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							</div>
 						</div>
 					</div>
-					<a href="#two" class="goto-next scrolly">Next</a>
+					<a href="#five" class="goto-next scrolly">Next</a>
 				</section>
 		
 			<!-- Five -->
