--- a/expertise.html
+++ b/expertise.html
@@ -34,9 +34,9 @@
 		
 			<section id="content" style="margin-left:200px;margin-right:200px;">
 			<h3><center style="padding:20px;">My Life Journey </center></h3>
-	<p>I'm an IT Infrastrcutre Support Specialist with Expectional knoweldge in NOC/Remote Support services. </p>
+	<p>I'm an IT Infrastrcutre Support Specialist with Expectional knoweldge in NOC/Remote Support Services. </p>
 	<p>In the young age itself I was fond of Technology, Robotics, Computers and Martial Arts. I started learning Kalari from the age of 12, when i was in my 7th Standard and now nearly having knowledge and experience of 13 years. At the age of 17, I started learning Karate also along with Kalaripayattu. During my life journey I understand that the most powerful tool in this world is<span style="color:red;"><b> Technology</b></span>, I hope to use the same to enhance future. </h3>
-	<p>From the childhood days itself I was an overweighted person, My </p>
+	<p>From the childhood days itself I was an overweighted person, I have the desire to lower my weight because everyone tried to mock me each time, so which got me the desire that i should lower my weight and become a handsome guy. </p>
 										<ul><center>My Technology Expertise</center>
 											<li>MCP/MCSA/MCSE Certified</li>
 											<li>ITIL® Certified </li>
