--- a/expertise.html
+++ b/expertise.html
@@ -35,8 +35,12 @@
 			<section id="content" style="margin-left:200px;margin-right:200px;">
 			<h3><center style="padding:20px;">My Life Journey </center></h3>
 	<p>I'm an IT Infrastrcutre Support Specialist with Expectional knoweldge in NOC/Remote Support Services. </p>
-	<p>In the young age itself I was fond of Technology, Robotics, Computers and Martial Arts. I started learning Kalari from the age of 12, when i was in my 7th Standard and now nearly having knowledge and experience of 13 years. At the age of 17, I started learning Karate also along with Kalaripayattu. During my life journey I understand that the most powerful tool in this world is<span style="color:red;"><b> Technology</b></span>, I hope to use the same to enhance future. </h3>
-	<p>From the childhood days itself I was an overweighted person, I have the desire to lower my weight because everyone tried to mock me each time, so which got me the desire that i should lower my weight and become a handsome guy. </p>
+	<p>In the young age itself I was fond of Technology, Robotics, Computers and Martial Arts. I started learning Kalari from the age of 12, when i was in my 7th Standard and now nearly having knowledge and experience of 13 years. 
+		At the age of 17, I started learning Karate also along with Kalaripayattu. During my life journey I understand that the most powerful tool in this world is<span style="color:red;"><b> Technology</b></span>, I hope to use the same to enhance future. </h3>
+	<p>From the childhood days itself I was an overweighted person, I have the desire to lower my weight because everyone tried to mock me each time, so which got me the desire that I should lower my weight and become a handsome guy. 
+		Around the age 18 I started gym at my own home. Then I tried to do daily workouts which helped not to increase my weight for the next two years. When I was in my college days, I met with an Accident in 2015 March 20th. I was unconcious for nearly 5 days, 
+		I opened my eyes on the 103rd hour after the accident happend. I survived from death to life in 2015. It was a period of 2 Months of revamping back to life from death. In July 2015 I have completely setup my home gym as I was not in a condition to travel daily to gym and other places.
+		From July to December in the span of 6 months I was able to lose my weight with my own diet and home gym training. I Finally was able to reach 56 Kg and was able to maintain that for the next 5 years and still maintaining. </p>
 										<ul><center>My Technology Expertise</center>
 											<li>MCP/MCSA/MCSE Certified</li>
 											<li>ITIL® Certified </li>
