--- a/expertise.html
+++ b/expertise.html
@@ -40,7 +40,7 @@
 	<p>From the childhood days itself I was an overweighted person, I have the desire to lower my weight because everyone tried to mock me each time, so which got me the desire that I should lower my weight and become a handsome guy. 
 		Around the age 18, I started gym at my own home. Then I tried to do daily workouts which helped me not to increase my weight for the next two years. When I was in my college days, I met with an Accident in 2015 March 20th. I was unconcious for nearly 5 days, 
 		I opened my eyes on the 103rd hour after the accident happend. I survived from death to life in 2015. It was a period of 2 Months of revamping back to life from death. In July 2015 I have completely setup my home gym as I was not in a condition to travel daily to gym and other places.
-		From July to December in the span of 6 months I was able to lose my weight with my own diet and home gym training. I finally was able to lose 30 Kgs and reach 56 Kg within the 6 months time and was still maintaining between 56 & 62 Kgs for nearly 5 years. </p>
+		From July to December in the span of 6 months I was able to lose my weight with my own diet and home gym training. I finally was able to lose 30 Kgs and reached 56 Kg within 6 months time period and still maintaining between 56 & 62 Kgs for nearly 5 years. </p>
 										<ul><center>My Technology Expertise</center>
 											<li>MCP/MCSA/MCSE Certified</li>
 											<li>ITIL® Certified </li>
