--- a/about.html
+++ b/about.html
@@ -32,90 +32,24 @@
 					<div class="container">
 						<header class="major">
 							<h2>About Me and My Life</h2>
-							<p>Learn About My Journey </p>
+							<p>Learn About My Life Journey </p>
 						</header>
 						
 						<!-- Text -->
 							<section>
 								<h3>About Myself</h3>
-								<p> <i> 
-
-Objective : Intelligent, skilled and professional candidate who is looking to be associated with progressive organization that gives me the scope to apply my educational, professional skills and provides me with advancement opportunity and knowledge empowerment.
-</i></p>
-
-<i>
-An enthusiastic and competent IT professional with over 5 years of experience in Implementation and Providing Technical Support for IT Infrastructure which mainly includes Windows Server and Windows Desktop services. 
-</i></p>
-<i>
-
-* Professional with 5+ Years of Experience in Both Technical Support (IT Environment) and Digital Marketing.
-</i></p>
-<i>
-* Certified in MCP, MCSA & Microsoft Certified Solutions Expert (MCSE)# 15634946
-</i></p>
-<i>
-* Certified in ITIL® Foundation in IT Service Management # GR750498412GR
-</i></p>
-<i>
-* Certification Course in Advanced Diploma in IT Infrastructure and Network Engineering# 33043
-</i></p>
-<i>
-* Certified in Google Cloud Certified Professional Cloud Architect# WWwnVY
-</i></p>
-<i>
-* Certified in WooRank Certified Marketing Partner
-</i></p>
-<i>
-* Certified in Klipfolio Certified Expert and Partner
-</i></p>
-<i>
-* Certified in Facebook Blueprint Certifications
-</i></p>
-<i>
-* Certified in Hubspot, Google Ads, Google Cloud, Bing Ads and LinkedIn Certifications
-</i></p>
-<i>
-* Certified in SEMrush, Yandex Direct and Metrica Expert Certified
-</i></p>
-<i>
-* Certified in VMware VSP & VTSP Foundation Certification
-</i></p>
-<i>
-* Certified in UiPath RPA Awarness training, UiPath Licensing, Business Analyst and Level 2 - Orchestrator
-</i></p>
-<i>
-* Adobe Certified Associate in Visual Communication using Adobe Photoshop CS5# m8Vz-DTQ2
-</i></p>
-<i>
-* Excellent knowledge in SOC & NOC Support.
-</i></p>
-<i>
-* Exceptional knowledge in Win 2008/2012/2016 Servers, Win 7/8/8.1/10 Clients.
-</i></p>
-<i>
-* Excellent knowledge of Active Directory, WSUS, Antivirus, Backup, Networking, Office 365 & G Suite.
-</i></p>
-<i>
-* Experience in supporting Enterprise-level clients with their PC support needs.
-</i></p>
-<i>
-* Able to adapt to situations and work for the team as required.
-</i></p>
-<i>
-* Posses Stellar Knowledge in Windows, Hardware and Networking.
-</i></p>
-<i>
-* Stellar troubleshooting skills in Computer Hardware and Software.
-</i></p>
-<i>
-* Stellar in System Administration in Linux, VMWARE and MCSE.
-</i></p>
-<i>
-* Adoption and experience of cloud solutions and services such as AWS, Azure and Google Cloud.
-</i></p>
-<i>
-* Much eager to learn new technologies, methodologies and willing to learn new things that improves the existing technology. Able to provide timely customer support with high quality. 
-</i></p>
+								
+<p>I'm an IT Infrastrcutre Support Specialist with Expectional knoweldge in NOC/Remote Support Services. </p>
+	<p>In the young age itself I was fond of Technology, Robotics, Computers and Martial Arts. I started learning Kalari from the age of 12, when i was in my 7th Standard and now nearly having knowledge and experience of 13 years. 
+		At the age of 17, I started learning Karate also along with Kalaripayattu. During my life journey I understand that the most powerful tool in this world is<span style="color:red;"><b> Technology</b></span>, I hope to use the same to enhance future. </h3>
+	<p>From the childhood days itself I was an overweighted person, I have the desire to lower my weight because everyone tried to mock me each time, so which got me the desire that I should lower my weight and become a handsome guy. 
+		Around the age 18, I started gym at my own home. Then I tried to do daily workouts which helped me not to increase my weight for the next two years. When I was in my college days, I met with an Accident in 2015 March 20th. I was unconcious for nearly 5 days, 
+		I opened my eyes on the 103rd hour after the accident happend. I survived from death to life in 2015. It was a period of 2 Months of revamping back to life from death. In July 2015 I have completely setup my home gym as I was not in a condition to travel daily to gym and other places.
+		From July to December in the span of 6 months I was able to lose my weight with my own diet and home gym training. I finally was able to lose 30 Kgs and reached 56 Kg within 6 months time period and still maintaining between 56 & 62 Kgs for nearly 5 years. </p>
+		<h4><center style="padding:10px;">My Professional Career </center></h4>
+	<p>I Started my careers as a freelancer when I was doing my college days. As a freelancer I was able to provide technical support and digital marketing for many customers over a period of more than 3 years. I worked as a freelancer from 2nd February 2015 to 31st August 2018.
+		After that I have Joined SC Soft an IT Company Company in Trivandrum and worked there for a period of 10 Months from September 12th 2018 to July 9th 2019. After that i have taken a small gap from July 2019 to February 2020. 
+		Currently in February 2020 I joined UST Global an MNC as System Analyst. </p>
 
 <hr />
 		<header>
