--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 						
 						<!-- Text -->
 							<section>
-								<h3>About Myself</h3>
+				<section id="content" style="margin-left:200px;margin-right:200px;">
 								
 <p>I'm an IT Infrastrcutre Support Specialist with Expectional knoweldge in NOC/Remote Support Services. </p>
 	<p>In the young age itself I was fond of Technology, Robotics, Computers and Martial Arts. I started learning Kalari from the age of 12, when i was in my 7th Standard and now nearly having knowledge and experience of 13 years. 
