--- a/expertise.html
+++ b/expertise.html
@@ -30,6 +30,12 @@
 
 			<!-- Main -->
 
+				<div id="main" class="wrapper style1">
+					<div class="container">
+						<header class="major">
+							<h2>About My Expertise</h2>
+						</header>
+						
 						<!-- Content -->
 		
 			<section id="content" style="margin-left:200px;margin-right:200px;">
