--- a/expertise.html
+++ b/expertise.html
@@ -39,12 +39,15 @@
 						<!-- Content -->
 		
 			<section id="content" style="margin-left:200px;margin-right:200px;">
-			<h3><center style="padding:20px;">My Expertise </center></h3>
+			<h3><center style="padding:20px;">My Profile Summary</center></h3>
 <p> <i> 
 Objective : Intelligent, skilled and professional candidate who is looking to be associated with progressive organization that gives me the scope to apply my educational, professional skills and provides me with advancement opportunity and knowledge empowerment.
 </i></p>
 <i>
 An enthusiastic and competent IT professional with over 5 years of experience in Implementation and Providing Technical Support for IT Infrastructure which mainly includes Windows Server and Windows Desktop services. 
+</i></p>
+<i>
+* Currently working as System Analyst @ UST Global in Thiruvananthapuram.
 </i></p>
 <i>
 * Professional with 5+ Years of Experience in Both Technical Support (IT Environment) and Digital Marketing.
