--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		
 			<!-- Five -->
 				<section id="five" class="wrapper style2 special fade">
-					<div class="container">
+					<div class="container" style="background-color:black;">
 						<header>
 							<h2>Get In Touch </h2>
 							<p>Contact Me: govindr015@gmail.com </p>
