--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				</section>
 		
 			<!-- Five -->
-				<section id="five" class="wrapper style2 special fade">
+				<section id="five" class="wrapper style2 special fade" style="background-color:black;">
 					<div class="container" style="background-color:black;">
 						<header>
 							<h2>Get In Touch </h2>
