--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		
 			<!-- Five -->
 				<section id="five" class="wrapper style2 special fade" style="background-color:black;">
-					<div class="container" style="background-color:black;">
+					<div class="container">
 						<header>
 							<h2>Get In Touch </h2>
 							<p>Contact Me: govindr015@gmail.com </p>
