--- a/about.html
+++ b/about.html
@@ -47,9 +47,9 @@
 		I opened my eyes on the 103rd hour after the accident happend. I survived from death to life in 2015. It was a period of 2 Months of revamping back to life from death. In July 2015 I have completely setup my home gym as I was not in a condition to travel daily to gym and other places.
 		From July to December in the span of 6 months I was able to lose my weight with my own diet and home gym training. I finally was able to lose 30 Kgs and reached 56 Kg within 6 months time period and still maintaining between 56 & 62 Kgs for nearly 5 years. </p>
 		<h4><center style="padding:10px;">My Professional Career </center></h4>
-	<p>I Started my careers as a freelancer when I was doing my college days. As a freelancer I was able to provide technical support and digital marketing for many customers over a period of more than 3 years. I worked as a freelancer from 2nd February 2015 to 31st August 2018.
+	<p>I started my career as a freelancer when I was doing my college days. As a freelancer I was able to provide technical support and digital marketing for many customers over a period of more than 3 years. I worked as a freelancer from 2nd February 2015 to 31st August 2018.
 		After that I have Joined SC Soft an IT Company Company in Trivandrum and worked there for a period of 10 Months from September 12th 2018 to July 9th 2019. After that i have taken a small gap from July 2019 to February 2020. 
-		Currently in February 2020 I joined UST Global an MNC as System Analyst. </p>
+		Currently I joined UST Global an MNC as System Analyst. </p>
 
 <hr />
 		<header>
