--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
 						<header>
 							<h1>  </h1>
 							<h2> Govind Ramachandran </h2>
-							<h3> ITIL® Certified | MCP/MCSA/MCSE Certified </h3>
+							<h3> System Analyst @ UST Global ✪ NOC/IMS Specialist </h3>
+							<h3> ITIL® Certified ✪ MCP/MCSA/MCSE/GCP Certified </h3>
 							<h4> <i> Being Myself Got Me to Where I am Today 😉 </i></h4>
-							<h4> <i> Only I can change my life.No one can do it for me...👊 </i></h4>
+							<h4> <i> Only I can change my life. No one can do it for me...👊 </i></h4>
 							<ul class="buttons vertical">
 								<li><a href="#one" class="button fit scrolly">Scroll Down</a></li>
 							</ul>
