--- a/expertise.html
+++ b/expertise.html
@@ -118,18 +118,31 @@ An enthusiastic and competent IT professional with over 5 years of experience in
 <i>
 * Much eager to learn new technologies, methodologies and willing to learn new things that improves the existing technology. Able to provide timely customer support with high quality. 
 </i></p>
+					<ul><center>Certifications</center>
+					<li>ITIL® Foundation in IT Service Management # GR750498412GR</li>
+					<li>MCP, MCSA & Microsoft Certified Solutions Expert (MCSE)# 15634946</li>
+					<li>Google Cloud Certified Professional Cloud Architect# WWwnVY</li>
+					<li>Adobe Certified Associate in VC using Adobe Photoshop CS5# m8Vz-DTQ2</li>
+					<li>SEMrush, Yandex Direct and Metrica Expert Certified</li>
+					<li>VMware VSP & VTSP Foundation Certified</li>
+					<li>Klipfolio Certified Expert and Partner</li>
+					<li>WooRank Certified Marketing Partner</li>
+					<li>G Suite, Google Cloud, Facebook Blueprint Certified</li>
+					<li>Hubspot, Google Ads, Bing Ads, LinkedIn Certified</li>
+					</ul>
+						
 					<ul><center>My Technology Expertise</center>
-							<li>MCP/MCSA/MCSE Certified</li>
-							<li>ITIL® Certified </li>
-							<li>Technical Support</li>
-							<li>Infrastructure Management Support Specialist</li>
-							</ul>
+					<li>Remote Technical Support</li>
+					<li>ITIL® Certified </li>
+					<li>Technical Support</li>
+					<li>Infrastructure Management Support Specialist</li>
+					</ul>
 
-							<ul><center>My Personal Interests</center>
-							<li>Martial Arts (Kalari & Karate)</li>
-							<li>Meditation</li>
-							<li>Influencer and Social Media Promoter</li>
-							</ul>
+					<ul><center>My Personal Interests</center>
+					<li>Martial Arts (Kalari & Karate)</li>
+					<li>Meditation</li>
+					<li>Influencer and Social Media Promoter</li>
+					</ul>
 		<div>
 		<li><center><a href="https://www.linkedin.com/in/govindram001" class="button also">Follow & Connect me on LinkedIn</a></center></li>
 		<br></br>
