--- a/expertise.html
+++ b/expertise.html
@@ -118,7 +118,7 @@ An enthusiastic and competent IT professional with over 5 years of experience in
 <i>
 * Much eager to learn new technologies, methodologies and willing to learn new things that improves the existing technology. Able to provide timely customer support with high quality. 
 </i></p>
-					<ul><center>Certifications</center>
+					<ul><h3><center>My Certifications</center></h3>
 					<li>ITIL® Foundation in IT Service Management # GR750498412GR</li>
 					<li>MCP, MCSA & Microsoft Certified Solutions Expert (MCSE)# 15634946</li>
 					<li>Google Cloud Certified Professional Cloud Architect# WWwnVY</li>
@@ -131,14 +131,14 @@ An enthusiastic and competent IT professional with over 5 years of experience in
 					<li>Hubspot, Google Ads, Bing Ads, LinkedIn Certified</li>
 					</ul>
 						
-					<ul><center>My Technology Expertise</center>
+					<ul><h3><center>My Technology Expertise</center></h3>
 					<li>Remote Technical Support</li>
 					<li>ITIL® Certified </li>
 					<li>Technical Support</li>
 					<li>Infrastructure Management Support Specialist</li>
 					</ul>
 
-					<ul><center>My Personal Interests</center>
+					<ul><h3><center>>My Personal Interests</center></h3>
 					<li>Martial Arts (Kalari & Karate)</li>
 					<li>Meditation</li>
 					<li>Influencer and Social Media Promoter</li>
