--- a/expertise.html
+++ b/expertise.html
@@ -138,7 +138,7 @@ An enthusiastic and competent IT professional with over 5 years of experience in
 					<li>Infrastructure Management Support Specialist</li>
 					</ul>
 
-					<ul><h3><center>>My Personal Interests</center></h3>
+					<ul><h3><center>My Personal Interests</center></h3>
 					<li>Martial Arts (Kalari & Karate)</li>
 					<li>Meditation</li>
 					<li>Influencer and Social Media Promoter</li>
