--- a/expertise.html
+++ b/expertise.html
@@ -133,9 +133,12 @@ An enthusiastic and competent IT professional with over 5 years of experience in
 						
 					<ul><h3><center>My Technology Expertise</center></h3>
 					<li>Remote Technical Support</li>
-					<li>ITIL® Certified </li>
+					<li>Digital Marketing </li>
 					<li>Technical Support</li>
-					<li>Infrastructure Management Support Specialist</li>
+					<li>NOC/SOC Support</li>
+					<li>Server/Desktop Support Specialist</li>
+					<li>Infrastructure Management Support</li>
+					<li>AWS/GCP/Azure Cloud Support</li>
 					</ul>
 
 					<ul><h3><center>My Personal Interests</center></h3>
