--- a/expertise.html
+++ b/expertise.html
@@ -147,9 +147,9 @@ An enthusiastic and competent IT professional with over 5 years of experience in
 					<li>Influencer and Social Media Promoter</li>
 					</ul>
 		<div>
-		<li><center><a href="https://www.linkedin.com/in/govindram001" class="button also">Follow & Connect me on LinkedIn</a></center></li>
+		<li class="list-style-none"><center><a href="https://www.linkedin.com/in/govindram001" class="button also">Follow & Connect me on LinkedIn</a></center></li>
 		<br></br>
-		<li><center><a href="https://www.facebook.com/govindram001" class="button also">Follow & Connect me on Facebook</a></center></li>
+		<li class="list-style-none"><center><a href="https://www.facebook.com/govindram001" class="button also">Follow & Connect me on Facebook</a></center></li>
 		</div>
 	</section>
 
