--- a/expertise.html
+++ b/expertise.html
@@ -48,76 +48,76 @@ Objective : Intelligent, skilled and professional candidate who is looking to be
 An enthusiastic and competent IT professional with over 5 years of experience in Implementation and Providing Technical Support for IT Infrastructure which mainly includes Windows Server and Windows Desktop services. 
 </li>
 <li>
-* Currently working as System Analyst @ UST Global in Thiruvananthapuram.
+Currently working as System Analyst @ UST Global in Thiruvananthapuram.
 </li>
 <li>
-* Professional with 5+ Years of Experience in Both Technical Support (IT Environment) and Digital Marketing.
+Professional with 5+ Years of Experience in Both Technical Support (IT Environment) and Digital Marketing.
 </li>
 <li>
-* Certified in MCP, MCSA & Microsoft Certified Solutions Expert (MCSE)# 15634946
+Certified in MCP, MCSA & Microsoft Certified Solutions Expert (MCSE)# 15634946
 </li>
 <li>
-* Certified in ITIL® Foundation in IT Service Management # GR750498412GR
+Certified in ITIL® Foundation in IT Service Management # GR750498412GR
 </li>
 <li>
-* Certification Course in Advanced Diploma in IT Infrastructure and Network Engineering# 33043
+Certification Course in Advanced Diploma in IT Infrastructure and Network Engineering# 33043
 </li>
 <li>
-* Certified in Google Cloud Certified Professional Cloud Architect# WWwnVY
+Certified in Google Cloud Certified Professional Cloud Architect# WWwnVY
 </li>
 <li>
-* Certified in WooRank Certified Marketing Partner
+Certified in WooRank Certified Marketing Partner
 </li>
 <li>
-* Certified in Klipfolio Certified Expert and Partner
+Certified in Klipfolio Certified Expert and Partner
 </li>
 <li>
-* Certified in Facebook Blueprint Certifications
+Certified in Facebook Blueprint Certifications
 </li>
 <li>
-* Certified in Hubspot, Google Ads, Google Cloud, Bing Ads and LinkedIn Certifications
+Certified in Hubspot, Google Ads, Google Cloud, Bing Ads and LinkedIn Certifications
 </li>
 <li>
-* Certified in SEMrush, Yandex Direct and Metrica Expert Certified
+Certified in SEMrush, Yandex Direct and Metrica Expert Certified
 </li>
 <li>
-* Certified in VMware VSP & VTSP Foundation Certification
+Certified in VMware VSP & VTSP Foundation Certification
 </li>
 <li>
-* Certified in UiPath RPA Awarness training, UiPath Licensing, Business Analyst and Level 2 - Orchestrator
+Certified in UiPath RPA Awarness training, UiPath Licensing, Business Analyst and Level 2 - Orchestrator
 </li>
 <li>
-* Adobe Certified Associate in Visual Communication using Adobe Photoshop CS5# m8Vz-DTQ2
+Adobe Certified Associate in Visual Communication using Adobe Photoshop CS5# m8Vz-DTQ2
 </li>
 <li>
-* Excellent knowledge in SOC & NOC Support.
+Excellent knowledge in SOC & NOC Support.
 </li>
 <li>
-* Exceptional knowledge in Win 2008/2012/2016 Servers, Win 7/8/8.1/10 Clients.
+Exceptional knowledge in Win 2008/2012/2016 Servers, Win 7/8/8.1/10 Clients.
 </li>
 <li>
-* Excellent knowledge of Active Directory, WSUS, Antivirus, Backup, Networking, Office 365 & G Suite.
+Excellent knowledge of Active Directory, WSUS, Antivirus, Backup, Networking, Office 365 & G Suite.
 </li>
 <li>
-* Experience in supporting Enterprise-level clients with their PC support needs.
+Experience in supporting Enterprise-level clients with their PC support needs.
 </li>
 <li>
-* Able to adapt to situations and work for the team as required.
+Able to adapt to situations and work for the team as required.
 </li>
 <li>
-* Posses Stellar Knowledge in Windows, Hardware and Networking.
+Posses Stellar Knowledge in Windows, Hardware and Networking.
 </li>
 <li>
-* Stellar troubleshooting skills in Computer Hardware and Software.
+Stellar troubleshooting skills in Computer Hardware and Software.
 </li>
 <li>
-* Stellar in System Administration in Linux, VMWARE and MCSE.
+Stellar in System Administration in Linux, VMWARE and MCSE.
 </li>
 <li>
-* Adoption and experience of cloud solutions and services such as AWS, Azure and Google Cloud.
+Adoption and experience of cloud solutions and services such as AWS, Azure and Google Cloud.
 </li>
 <li>
-* Much eager to learn new technologies, methodologies and willing to learn new things that improves the existing technology. Able to provide timely customer support with high quality. 
+Much eager to learn new technologies, methodologies and willing to learn new things that improves the existing technology. Able to provide timely customer support with high quality. 
 </li></ul>
 				
 					<ul><h3><center>My Certifications</center></h3>
