--- a/expertise.html
+++ b/expertise.html
@@ -48,7 +48,7 @@ Objective : Intelligent, skilled and professional candidate who is looking to be
 An enthusiastic and competent IT professional with over 5 years of experience in Implementation and Providing Technical Support for IT Infrastructure which mainly includes Windows Server and Windows Desktop services. 
 </li>
 <li>
-Currently working as System Analyst @ UST Global in Thiruvananthapuram.
+Currently working as Systems Engineer @ UST Global in Thiruvananthapuram.
 </li>
 <li>
 Professional with 5+ Years of Experience in Both Technical Support (IT Environment) and Digital Marketing.
