--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<div class="content">
 						<header>
 							<h1>  </h1>
-							<h2> Govind R </h2>
+							<h2> Govind Ramachandran </h2>
 							<h3> Systems Engineer @ UST Global ✪ NOC/IMS Specialist </h3>
 							<h3> ITIL® Certified ✪ MCP/MCSA/MCSE/GCP Certified </h3>
 							<h4> <i> Being Myself Got Me to Where I am Today 😉 </i></h4>
