--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 							<li><a href="https://bit.ly/GRGCP" class="button also">Google Certified</a></li>
 							<li><a href="https://www.crunchbase.com/person/govind-r" class="button also">Crunchbase</a></li>
 							<li><a href="https://www.youracclaim.com/users/govindram001" class="button also">Acclaim Profile</a></li>
-
+                                                        <select id="Certifications">
+								<option value"Google Certified">Google Certified</option>
+								<option value"Acclaim Profile">Acclaim Profile</option>
+							</select>
 						</ul>
 					</nav>
 				</header>
