--- a/index.html
+++ b/index.html
@@ -19,15 +19,16 @@
 							<li>
 							<a href="expertise.html">My Expertise</a>
 							<li><a href="about.html"> About Me </a></li>
+							<ul><li>
+							<a href="">Certifications</a>
+							<li><a href="https://bit.ly/GRGCP">Google Certified</li>
+							<li><a href="https://www.youracclaim.com/users/govindram001">Acclaim Profile</a></li>
+							</li></ul>
 							<li><a href="images/Govind.pdf" class="button special">Resume</a></li>
 							<li><a href="https://www.facebook.com/govindram001" class="button also">Facebook</a></li>
-							<li><a href="https://bit.ly/GRGCP" class="button also">Google Certified</a></li>
+							<!--<li><a href="https://bit.ly/GRGCP" class="button also">Google Certified</a></li>-->
 							<li><a href="https://www.crunchbase.com/person/govind-r" class="button also">Crunchbase</a></li>
-							<li><a href="https://www.youracclaim.com/users/govindram001" class="button also">Acclaim Profile</a></li>
-                                                        <select id="Certifications">
-								<option value"Google Certified">Google Certified</option>
-								<option value"Acclaim Profile">Acclaim Profile</option>
-							</select>
+							<!--<li><a href="https://www.youracclaim.com/users/govindram001" class="button also">Acclaim Profile</a></li>-->
 						</ul>
 					</nav>
 				</header>
