--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 							<a href="expertise.html">My Expertise</a>
 							<li><a href="about.html"> About Me </a></li>
 							<li>
-							<a href="">Certifications</a>
+							<a href="" class="button also">Certifications</a>
 							<ul>
 							<li><a href="https://bit.ly/GRGCP">Google Certified</li>
 							<li><a href="https://www.youracclaim.com/users/govindram001">Acclaim Profile</a></li>
