--- a/index.html
+++ b/index.html
@@ -25,10 +25,17 @@
 							<li><a href="https://bit.ly/GRGCP">Google Certified</li>
 							<li><a href="https://www.youracclaim.com/users/govindram001">Acclaim Profile</a></li>
 							</ul></li>
+							<a href="" class="button also">Social</a>
+							<ul>
+							<li><a href="https://www.linkedin.com/in/govindram001">LinkedIn</a></li>
+							<li><a href="https://www.crunchbase.com/person/govind-r">Crunchbase</li>
+							<li><a href="https://www.facebook.com/govindram001">Facebook</a></li>
+							<li><a href="https://twitter.com/govindr015">Twitter</a></li>
+							</ul></li>
 							<li><a href="images/Govind.pdf" class="button special">Resume</a></li>
-							<li><a href="https://www.facebook.com/govindram001" class="button also">Facebook</a></li>
+							<!--<li><a href="https://www.facebook.com/govindram001" class="button also">Facebook</a></li>-->
 							<!--<li><a href="https://bit.ly/GRGCP" class="button also">Google Certified</a></li>-->
-							<li><a href="https://www.crunchbase.com/person/govind-r" class="button also">Crunchbase</a></li>
+							<!--<li><a href="https://www.crunchbase.com/person/govind-r" class="button also">Crunchbase</a></li>-->
 							<!--<li><a href="https://www.youracclaim.com/users/govindram001" class="button also">Acclaim Profile</a></li>-->
 						</ul>
 					</nav>
