--- a/index.html
+++ b/index.html
@@ -22,16 +22,17 @@
 							<li>
 							<a href="" class="button also">Certifications</a>
 							<ul>
-							<li><a href="https://bit.ly/GRGCP">Google Certified</li>
-							<li><a href="https://www.youracclaim.com/users/govindram001">Acclaim Profile</a></li>
+							<li><a href="https://bit.ly/GRGCP"><center>Google Certified</center></li>
+							<li><a href="https://www.youracclaim.com/users/govindram001"><center>Acclaim Profile</center></a></li>
 							</ul></li>
 							<li>
 							<a href="" class="button also">Social</a>
 							<ul>
-							<li><a href="https://www.linkedin.com/in/govindram001">LinkedIn</a></li>
-							<li><a href="https://www.crunchbase.com/person/govind-r">Crunchbase</li>
-							<li><a href="https://www.facebook.com/govindram001">Facebook</a></li>
-							<li><a href="https://twitter.com/govindr015">Twitter</a></li>
+							<li><a href="https://www.linkedin.com/in/govindram001"><center>LinkedIn</center></a></li>
+							<li><a href="https://www.crunchbase.com/person/govind-r"><center>Crunchbase</center></li>
+							<li><a href="https://www.facebook.com/govindram001"><center>Facebook</center></a></li>
+							<li><a href="https://twitter.com/govindr015"><center>Twitter</center></a></li>
+							<li><a href="https://www.instagram.com/govindram001"><center>Instagram</center></a></li>
 							</ul></li>
 							<li><a href="images/Govind.pdf" class="button special">Resume</a></li>
 							<!--<li><a href="https://www.facebook.com/govindram001" class="button also">Facebook</a></li>-->
