--- a/expertise.html
+++ b/expertise.html
@@ -16,14 +16,31 @@
 <header id="header">
 		<nav id="nav">
 		<ul>
-		<li><a href="index.html">Home</a></li>
-		<li>
-		<li><a href="https://www.facebook.com/govindram001" class="button also">Facebook</a></li>
-		<li><a href="https://bit.ly/GRGCP" class="button also">Google Certified</a></li>
-		<li><a href="images/Govind.pdf" class="button special">Resume</a></li>
-		<li><a href="https://www.crunchbase.com/person/govind-r" class="button also">Crunchbase</a></li>
-		<li><a href="https://www.youracclaim.com/users/govindram001" class="button also">Acclaim Profile</a></li>
-		</ul>
+							<li><a href="index.html">Home</a></li>
+							<li>
+							<a href="expertise.html">My Expertise</a>
+							<li><a href="about.html"> About Me </a></li>
+							<li>
+							<a href="" class="button also">Certifications</a>
+							<ul>
+							<li><a href="https://bit.ly/GRGCP"><center>Google Certified</center></li>
+							<li><a href="https://www.youracclaim.com/users/govindram001"><center>Acclaim Profile</center></a></li>
+							</ul></li>
+							<li>
+							<a href="" class="button also">Social</a>
+							<ul>
+							<li><a href="https://www.linkedin.com/in/govindram001"><center>LinkedIn</center></a></li>
+							<li><a href="https://www.crunchbase.com/person/govind-r"><center>Crunchbase</center></li>
+							<li><a href="https://www.facebook.com/govindram001"><center>Facebook</center></a></li>
+							<li><a href="https://twitter.com/govindr015"><center>Twitter</center></a></li>
+							<li><a href="https://www.instagram.com/govindram001"><center>Instagram</center></a></li>
+							</ul></li>
+							<li><a href="images/Govind.pdf" class="button special">Resume</a></li>
+							<!--<li><a href="https://www.facebook.com/govindram001" class="button also">Facebook</a></li>-->
+							<!--<li><a href="https://bit.ly/GRGCP" class="button also">Google Certified</a></li>-->
+							<!--<li><a href="https://www.crunchbase.com/person/govind-r" class="button also">Crunchbase</a></li>-->
+							<!--<li><a href="https://www.youracclaim.com/users/govindram001" class="button also">Acclaim Profile</a></li>-->
+						</ul>
 		</nav>
 		</header>
 		</header>
