--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 							<h2>Get In Touch </h2>
 							<p>Contact Me: govindr015@gmail.com </p>
 							<p>Contact Me: govindr95@outlook.com </p>
+							<p>Contact Me on Whatsapp @ https://wa.link/zm84lv </p>
 							
 			<li class="list-style-none"><a href="https://www.linkedin.com/in/govindram001" class="button also">Find me on LinkedIn</a></li>
 							
@@ -100,7 +101,6 @@
 				<li><a href="index.html" class="button">Back to Top</a></li>
 				</ul>
 				<ul class="icons">
-	<li><a href="https://www.facebook.com/govindram001" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
 	<li><a href="https://www.linkedin.com/in/govindram001" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 	<li><a href="https://github.com/govindram001" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 	</ul>
