--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 							<p>Contact Me: govindr015@gmail.com </p>
 							<p>Contact Me: govindr95@outlook.com </p>
 														
-			<li class="list-style-none"><a href="https://wa.link/zm84lv" class="button also">Connect Me on Whatsapp</a></li>
+			<li class="list-style-none"><a href="https://wa.link/zm84lv" class="button also">Connect Me on Whatsapp</a></li><br></br>
 			<li class="list-style-none"><a href="https://www.linkedin.com/in/govindram001" class="button also">Find me on LinkedIn</a></li>
 							
 				</section>
