--- a/index.html
+++ b/index.html
@@ -23,21 +23,22 @@
 							<a href="" class="button also">Certifications</a>
 							<ul>
 							<li><a href="https://bit.ly/GRGCP"><center>Google Certified</center></li>
-							<li><a href="https://www.youracclaim.com/users/govindrulez"><center>Acclaim Profile</center></a></li>
+							<li><a href="https://www.youracclaim.com/users/govindrkannan"><center>Acclaim Profile</center></a></li>
+							<li><a href="https://docs.microsoft.com/en-us/users/govindrkannan"><center>Microsoft Learn</center></a></li>
 							</ul></li>
 							<li>
 							<a href="" class="button also">Social</a>
 							<ul>
-							<li><a href="https://www.linkedin.com/in/govindrulez"><center>LinkedIn</center></a></li>
+							<li><a href="https://www.linkedin.com/in/govindrkannan"><center>LinkedIn</center></a></li>
 							<li><a href="https://www.crunchbase.com/person/govind-r"><center>Crunchbase</center></li>
-							<li><a href="https://twitter.com/govindrulez"><center>Twitter</center></a></li>
-							<li><a href="https://www.instagram.com/govindrulez"><center>Instagram</center></a></li>
+							<li><a href="https://twitter.com/govindrkannan"><center>Twitter</center></a></li>
+							<li><a href="https://www.instagram.com/govindrkannan"><center>Instagram</center></a></li>
 							</ul></li>
 							<li><a href="images/Govind.pdf" class="button special">Resume</a></li>
-							<!--<li><a href="https://www.facebook.com/govindrulez" class="button also">Facebook</a></li>-->
+							<!--<li><a href="https://www.facebook.com/govindrkannan" class="button also">Facebook</a></li>-->
 							<!--<li><a href="https://bit.ly/GRGCP" class="button also">Google Certified</a></li>-->
 							<!--<li><a href="https://www.crunchbase.com/person/govind-r" class="button also">Crunchbase</a></li>-->
-							<!--<li><a href="https://www.youracclaim.com/users/govindrulez" class="button also">Acclaim Profile</a></li>-->
+							<!--<li><a href="https://www.youracclaim.com/users/govindrkannan" class="button also">Acclaim Profile</a></li>-->
 						</ul>
 					</nav>
 				</header>
@@ -101,8 +102,8 @@
 				<li><a href="index.html" class="button">Back to Top</a></li>
 				</ul>
 				<ul class="icons">
-	<li><a href="https://www.linkedin.com/in/govindrulez" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-	<li><a href="https://github.com/govindrulez" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+	<li><a href="https://www.linkedin.com/in/govindrkannan" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+	<li><a href="https://github.com/govindrkannan" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 	</ul>
 	<ul class="copyright">
 	<li>@Govind All rights reserved.</li>
