--- a/about.html
+++ b/about.html
@@ -23,15 +23,16 @@
 							<a href="" class="button also">Certifications</a>
 							<ul>
 							<li><a href="https://bit.ly/GRGCP"><center>Google Certified</center></li>
-							<li><a href="https://www.youracclaim.com/users/govindrulez"><center>Acclaim Profile</center></a></li>
+							<li><a href="https://www.youracclaim.com/users/govindrkannan"><center>Acclaim Profile</center></a></li>
+							<li><a href="https://docs.microsoft.com/en-us/users/govindrkannan"><center>Microsoft Learn</center></a></li>
 							</ul></li>
 							<li>
 							<a href="" class="button also">Social</a>
 							<ul>
-							<li><a href="https://www.linkedin.com/in/govindrulez"><center>LinkedIn</center></a></li>
+							<li><a href="https://www.linkedin.com/in/govindrkannan"><center>LinkedIn</center></a></li>
 							<li><a href="https://www.crunchbase.com/person/govind-r"><center>Crunchbase</center></li>
-							<li><a href="https://twitter.com/govindrulez"><center>Twitter</center></a></li>
-							<li><a href="https://www.instagram.com/govindrulez"><center>Instagram</center></a></li>
+							<li><a href="https://twitter.com/govindrkannan"><center>Twitter</center></a></li>
+							<li><a href="https://www.instagram.com/govindrkannan"><center>Instagram</center></a></li>
 							</ul></li>
 							<li><a href="images/Govind.pdf" class="button special">Resume</a></li>
 							<!--<li><a href="https://www.facebook.com/govindrulez" class="button also">Facebook</a></li>-->
