--- a/expertise.html
+++ b/expertise.html
@@ -26,6 +26,7 @@
 							<li><a href="https://bit.ly/GRGCP"><center>Google Certified</center></li>
 							<li><a href="https://www.youracclaim.com/users/govindrkannan"><center>Acclaim Profile</center></a></li>
 							<li><a href="https://docs.microsoft.com/en-us/users/govindrkannan"><center>Microsoft Learn</center></a></li>
+							<li><a href="hhttps://app.pluralsight.com/profile/govindrkannan"><center>Pluralsight</center></a></li>
 							</ul></li>
 							<li>
 							<a href="" class="button also">Social</a>
