--- a/expertise.html
+++ b/expertise.html
@@ -35,6 +35,8 @@
 							<li><a href="https://www.crunchbase.com/person/govind-r"><center>Crunchbase</center></li>
 							<li><a href="https://twitter.com/govindrkannan"><center>Twitter</center></a></li>
 							<li><a href="https://www.instagram.com/govindrkannan"><center>Instagram</center></a></li>
+							<li><a href="https://about.me/govindrkannan"><center>About Me</center></a></li>
+							<li><a href="https://angel.co/u/govindrkannan"><center>Angel List</center></a></li>
 							</ul></li>
 							<li><a href="images/Govind.pdf" class="button special">Resume</a></li>
 							<!--<li><a href="https://www.facebook.com/govindrulez" class="button also">Facebook</a></li>-->
