--- a/expertise.html
+++ b/expertise.html
@@ -31,6 +31,7 @@
 							<li>
 							<a href="" class="button also">Social</a>
 							<ul>
+							<li><a href="https://www.facebook.com/govindrkannan" class="button also">Facebook</a></li>
 							<li><a href="https://www.linkedin.com/in/govindrkannan"><center>LinkedIn</center></a></li>
 							<li><a href="https://www.crunchbase.com/person/govind-r"><center>Crunchbase</center></li>
 							<li><a href="https://twitter.com/govindrkannan"><center>Twitter</center></a></li>
@@ -39,10 +40,6 @@
 							<li><a href="https://angel.co/u/govindrkannan"><center>Angel List</center></a></li>
 							</ul></li>
 							<li><a href="images/Govind.pdf" class="button special">Resume</a></li>
-							<!--<li><a href="https://www.facebook.com/govindrulez" class="button also">Facebook</a></li>-->
-							<!--<li><a href="https://bit.ly/GRGCP" class="button also">Google Certified</a></li>-->
-							<!--<li><a href="https://www.crunchbase.com/person/govind-r" class="button also">Crunchbase</a></li>-->
-							<!--<li><a href="https://www.youracclaim.com/users/govindrulez" class="button also">Acclaim Profile</a></li>-->
 						</ul>
 		</nav>
 		</header>
