--- a/expertise.html
+++ b/expertise.html
@@ -31,7 +31,7 @@
 							<li>
 							<a href="" class="button also">Social</a>
 							<ul>
-							<li><a href="https://www.facebook.com/govindrkannan" class="button also">Facebook</a></li>
+							<li><a href="https://www.facebook.com/govindrkannan"><center>Facebook</center></a></li>
 							<li><a href="https://www.linkedin.com/in/govindrkannan"><center>LinkedIn</center></a></li>
 							<li><a href="https://www.crunchbase.com/person/govind-r"><center>Crunchbase</center></li>
 							<li><a href="https://twitter.com/govindrkannan"><center>Twitter</center></a></li>
