--- a/expertise.html
+++ b/expertise.html
@@ -27,6 +27,7 @@
 							<li><a href="https://www.youracclaim.com/users/govindrkannan"><center>Acclaim Profile</center></a></li>
 							<li><a href="https://docs.microsoft.com/en-us/users/govindrkannan"><center>Microsoft Learn</center></a></li>
 							<li><a href="https://app.pluralsight.com/profile/govindrkannan"><center>Pluralsight</center></a></li>
+							<li><a href="https://trailblazer.me/id/govindrkannan"><center>Trailblazer</center></a></li>
 							</ul></li>
 							<li>
 							<a href="" class="button also">Social</a>
