--- a/about.html
+++ b/about.html
@@ -38,6 +38,7 @@
 							<li><a href="https://www.instagram.com/govindrkannan"><center>Instagram</center></a></li>
 							<li><a href="https://about.me/govindrkannan"><center>About Me</center></a></li>
 							<li><a href="https://angel.co/u/govindrkannan"><center>Angel List</center></a></li>
+							<li><a href="https://wiseintro.co/govindrkannan"><center>WiseIntro</center></a></li>
 							</ul></li>
 							<li><a href="images/Govind.pdf" class="button special">Resume</a></li>
 				</ul>
