--- a/about.html
+++ b/about.html
@@ -24,6 +24,7 @@
 							<ul>
 							<li><a href="https://bit.ly/GRGCP"><center>Google Certified</center></li>
 							<li><a href="https://www.youracclaim.com/users/govindrkannan"><center>Acclaim Profile</center></a></li>
+							<li><a href="https://www.credential.net/profile/govindr"><center>Credential</center></a></li>
 							<li><a href="https://docs.microsoft.com/en-us/users/govindrkannan"><center>Microsoft Learn</center></a></li>
 							<li><a href="https://app.pluralsight.com/profile/govindrkannan"><center>Pluralsight</center></a></li>
 							<li><a href="https://trailblazer.me/id/govindrkannan"><center>Trailblazer</center></a></li>
