--- a/expertise.html
+++ b/expertise.html
@@ -157,7 +157,7 @@ Much eager to learn new technologies, methodologies and willing to learn new thi
 					<li>Remote Technical Support</li>
 					<li>Digital Marketing </li>
 					<li>Technical Support</li>
-					<li>NOC/SOC Support</li>
+					<li>NOC/IMS/CIS Support Specialist</li>
 					<li>Server/Desktop Support Specialist</li>
 					<li>Infrastructure Management Support</li>
 					<li>AWS/GCP/Azure Cloud Support</li>
