--- a/expertise.html
+++ b/expertise.html
@@ -110,7 +110,7 @@ Certified in UiPath RPA Awarness training, UiPath Licensing, Business Analyst an
 Adobe Certified Associate in Visual Communication using Adobe Photoshop CS5# m8Vz-DTQ2
 </li>
 <li>
-Excellent knowledge in SOC & NOC Support.
+Excellent knowledge in NOC/IMS/CIS & SOC Support.
 </li>
 <li>
 Exceptional knowledge in Win 2008/2012/2016 Servers, Win 7/8/8.1/10 Clients.
