--- a/expertise.html
+++ b/expertise.html
@@ -185,7 +185,7 @@ Much eager to learn new technologies, methodologies and willing to learn new thi
 			<li><a href="expertise.html" class="button">Back to Top</a></li>
 			</ul>
 			<ul class="icons">
-			<!--<li><a href="https://www.facebook.com/govindrkannan" class="button also">Facebook</a></li>-->
+			<li><a href="https://www.facebook.com/govindrkannan" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
 			<li><a href="https://www.linkedin.com/in/govindrkannan" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 			<li><a href="https://github.com/govindrkannan" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 			</ul>
