--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<h3> Systems Engineer @ UST Global ✪ NOC/IMS/CIS Specialist </h3>
 							<h3> ITIL® Certified ✪ MCP/MCSA/MCSE/GCP Certified </h3>
 							<h4> <i> Being Myself Got Me to Where I am Today 😉 </i></h4>
-							<h4> <i> Only I can change my life. No one can do it for me...👊 </i></h4>
+							<!--<h4> <i> Only I can change my life. No one can do it for me...👊 </i></h4>--!>
 							<ul class="buttons vertical list-style-none">
 							<li><a href="#one" class="button fit scrolly">Scroll Down</a></li>
 							</ul>
