--- a/expertise.html
+++ b/expertise.html
@@ -67,19 +67,25 @@
 Objective : Intelligent, skilled and professional candidate who is looking to be associated with progressive organization that gives me the scope to apply my educational, professional skills and provides me with advancement opportunity and knowledge empowerment.
 </li>
 <li>
-An enthusiastic and competent IT professional with over 5 years of experience in Implementation and Providing Technical Support for IT Infrastructure which mainly includes Windows Server and Windows Desktop services. 
+An enthusiastic and competent IT professional with about 6 years of experience in Implementation and Providing Technical Support for IT Infrastructure which mainly includes Windows Server and Windows Desktop services. 
 </li>
 <li>
 Currently working as Systems Engineer @ UST Global in Thiruvananthapuram.
 </li>
 <li>
-Professional with 5+ Years of Experience in Both Technical Support (IT Environment) and Digital Marketing.
+Professional with about 6 Years of Experience in Both Technical Support (IT Environment) and Digital Marketing.
 </li>
 <li>
 Certified in MCP, MCSA & Microsoft Certified Solutions Expert (MCSE)# 15634946
 </li>
 <li>
 Certified in ITIL® Foundation in IT Service Management # GR750498412GR
+</li>
+<li>
+Certified in Microsoft Azure Administrator Associate # H583-5386
+</li>
+<li>
+Certified in Lean Six Sigma White Belt # IuAqvWLp3b
 </li>
 <li>
 Certification Course in Advanced Diploma in IT Infrastructure and Network Engineering# 33043
