--- a/expertise.html
+++ b/expertise.html
@@ -63,94 +63,41 @@
 			<section id="content" style="margin-left:200px;margin-right:200px;">
 			<h3><center style="padding:20px;">My Profile Summary</center></h3>
 
-<ul><li> 
-Objective : Intelligent, skilled and professional candidate who is looking to be associated with progressive organization that gives me the scope to apply my educational, professional skills and provides me with advancement opportunity and knowledge empowerment.
-</li>
-<li>
-An enthusiastic and competent IT professional with about 6 years of experience in Implementation and Providing Technical Support for IT Infrastructure which mainly includes Windows Server and Windows Desktop services. 
-</li>
-<li>
-Currently working as Systems Engineer @ UST Global in Thiruvananthapuram.
-</li>
-<li>
-Professional with about 6 Years of Experience in Both Technical Support (IT Environment) and Digital Marketing.
-</li>
-<li>
-Certified in MCP, MCSA & Microsoft Certified Solutions Expert (MCSE)# 15634946
-</li>
-<li>
-Certified in ITIL® Foundation in IT Service Management # GR750498412GR
-</li>
-<li>
-Certified in Microsoft Azure Administrator Associate # H583-5386
-</li>
-<li>
-Certified in Lean Six Sigma White Belt # IuAqvWLp3b
-</li>
-<li>
-Certification Course in Advanced Diploma in IT Infrastructure and Network Engineering# 33043
-</li>
-<li>
-Certified in Google Cloud Certified Professional Cloud Architect# WWwnVY
-</li>
-<li>
-Certified in WooRank Certified Marketing Partner
-</li>
-<li>
-Certified in Klipfolio Certified Expert and Partner
-</li>
-<li>
-Certified in Facebook Blueprint Certifications
-</li>
-<li>
-Certified in Hubspot, Google Ads, Google Cloud, Bing Ads and LinkedIn Certifications
-</li>
-<li>
-Certified in SEMrush, Yandex Direct and Metrica Expert Certified
-</li>
-<li>
-Certified in VMware VSP & VTSP Foundation Certification
-</li>
-<li>
-Certified in UiPath RPA Awarness training, UiPath Licensing, Business Analyst and Level 2 - Orchestrator
-</li>
-<li>
-Adobe Certified Associate in Visual Communication using Adobe Photoshop CS5# m8Vz-DTQ2
-</li>
-<li>
-Excellent knowledge in NOC/IMS/CIS & SOC Support.
-</li>
-<li>
-Exceptional knowledge in Win 2008/2012/2016 Servers, Win 7/8/8.1/10 Clients.
-</li>
-<li>
-Excellent knowledge of Active Directory, WSUS, Antivirus, Backup, Networking, Office 365 & G Suite.
-</li>
-<li>
-Experience in supporting Enterprise-level clients with their PC support needs.
-</li>
-<li>
-Able to adapt to situations and work for the team as required.
-</li>
-<li>
-Posses Stellar Knowledge in Windows, Hardware and Networking.
-</li>
-<li>
-Stellar troubleshooting skills in Computer Hardware and Software.
-</li>
-<li>
-Stellar in System Administration in Linux, VMWARE and MCSE.
-</li>
-<li>
-Adoption and experience of cloud solutions and services such as AWS, Azure and Google Cloud.
-</li>
-<li>
-Much eager to learn new technologies, methodologies and willing to learn new things that improves the existing technology. Able to provide timely customer support with high quality. 
+<ul><li>Objective : Intelligent, skilled and professional candidate who is looking to be associated with progressive organization that gives me the scope to apply my educational, professional skills and provides me with advancement opportunity and knowledge empowerment.</li>
+<li>An enthusiastic and competent IT professional with about 6 years of experience in Implementation and Providing Technical Support for IT Infrastructure which mainly includes Windows Server and Windows Desktop services.</li>
+<li>Currently working as Systems Engineer @ UST Global in Thiruvananthapuram.</li>
+<li>Professional with about 6 Years of Experience in Both Technical Support (IT Environment) and Digital Marketing.</li>
+<li>Certified in MCP, MCSA & Microsoft Certified Solutions Expert (MCSE) # 15634946</li>
+<li>Certified in ITIL® Foundation in IT Service Management # GR750498412GR</li>
+<li>Certified in Microsoft Azure Administrator Associate # H583-5386</li>
+<li>Certified in Lean Six Sigma White Belt # IuAqvWLp3b</li>
+<li>Certification Course in Advanced Diploma in IT Infrastructure and Network Engineering # 33043</li>
+<li>Certified in Google Cloud Certified Professional Cloud Architect# WWwnVY</li>
+<li>Certified in WooRank Certified Marketing Partner</li>
+<li>Certified in Klipfolio Certified Expert and Partner</li>
+<li>Certified in Facebook Blueprint Certifications</li>
+<li>Certified in Hubspot, Google Ads, Google Cloud, Bing Ads and LinkedIn Certifications</li>
+<li>Certified in SEMrush, Yandex Direct and Metrica Expert Certified</li>
+<li>Certified in VMware VSP & VTSP Foundation Certification</li>
+<li>Certified in UiPath RPA Awarness training, UiPath Licensing, Business Analyst and Level 2 - Orchestrator</li>
+<li>Adobe Certified Associate in Visual Communication using Adobe Photoshop CS5 # m8Vz-DTQ2</li>
+<li>Excellent knowledge in NOC/IMS/CIS & SOC Support.</li>
+<li>Exceptional knowledge in Win 2008/2012/2016 Servers, Win 7/8/8.1/10 Clients.</li>
+<li>Excellent knowledge of Active Directory, WSUS, Antivirus, Backup, Networking, Office 365 & G Suite.</li>
+<li>Experience in supporting Enterprise-level clients with their PC support needs.</li>
+<li>Able to adapt to situations and work for the team as required.</li>
+<li>Posses Stellar Knowledge in Windows, Hardware and Networking.</li>
+<li>Stellar troubleshooting skills in Computer Hardware and Software.</li>
+<li>Stellar in System Administration in Linux, VMWARE and MCSE.</li>
+<li>Adoption and experience of cloud solutions and services such as AWS, Azure and Google Cloud.</li>
+<li>Much eager to learn new technologies, methodologies and willing to learn new things that improves the existing technology. Able to provide timely customer support with high quality. 
 </li></ul>
 				
 					<ul><h3><center>My Certifications</center></h3>
 					<li>ITIL® Foundation in IT Service Management # GR750498412GR</li>
 					<li>MCP, MCSA & Microsoft Certified Solutions Expert (MCSE)# 15634946</li>
+					<li>Certified in Microsoft Azure Administrator Associate # H583-5386</li>
+					<li>Certified in Lean Six Sigma White Belt # IuAqvWLp3b</li>
 					<li>Google Cloud Certified Professional Cloud Architect# WWwnVY</li>
 					<li>Adobe Certified Associate in VC using Adobe Photoshop CS5# m8Vz-DTQ2</li>
 					<li>SEMrush, Yandex Direct and Metrica Expert Certified</li>
@@ -158,8 +105,7 @@ Much eager to learn new technologies, methodologies and willing to learn new thi
 					<li>Klipfolio Certified Expert and Partner</li>
 					<li>WooRank Certified Marketing Partner</li>
 					<li>G Suite, Google Cloud, Facebook Blueprint Certified</li>
-					<li>Hubspot, Google Ads, Bing Ads, LinkedIn Certified</li>
-					</ul>
+					<li>Hubspot, Google Ads, Bing Ads, LinkedIn Certified</li></ul>
 						
 					<ul><h3><center>My Technology Expertise</center></h3>
 					<li>Remote Technical Support</li>
@@ -168,8 +114,7 @@ Much eager to learn new technologies, methodologies and willing to learn new thi
 					<li>NOC/IMS/CIS Support Specialist</li>
 					<li>Server/Desktop Support Specialist</li>
 					<li>Infrastructure Management Support</li>
-					<li>AWS/GCP/Azure Cloud Support</li>
-					</ul>
+					<li>AWS/GCP/Azure Cloud Support</li></ul>
 
 					<ul><h3><center>My Personal Interests</center></h3>
 					<li>Martial Arts (Kalari & Karate)</li>
